--- a/tiger.html
+++ b/tiger.html
@@ -26,9 +26,9 @@
   </div>
     
     <div class="links">
-      <a href="tabelaDeHorarios/horarios.html">Horários</a>
+      <a href="/tabelaDeHorarios/horarios.html">Horários</a>
       <a href="tiger.html">Probabilidade</a>
-      <a href="Giros/Giros.html">Roleta</a>
+      <a href="/Giros/Giros.html">Roleta</a>
     </div>
     
   </div>
