--- a/Giros/Giros.html
+++ b/Giros/Giros.html
@@ -18,8 +18,8 @@
   </div>
     
     <div class="links">
-      <a href="/tabelaDeHorarios/horarios.html">Horários</a>
-      <a href="/tiger.html">Probabilidade</a>
+      <a href="tabelaDeHorarios/horarios.html">Horários</a>
+      <a href="tiger.html">Probabilidade</a>
       <a href="Giros.html">Roleta</a>
     </div>
     
