--- a/tabelaDeHorarios/horarios.html
+++ b/tabelaDeHorarios/horarios.html
@@ -20,9 +20,9 @@
   </div>
     
     <div class="links">
-      <a href="/tabelaDeHorarios/horarios.html">Horários</a>
-      <a href="/tiger.html">Probabilidade</a>
-      <a href="/Giros/Giros.html">Roleta</a>
+      <a href="tabelaDeHorarios/horarios.html">Horários</a>
+      <a href="tiger.html">Probabilidade</a>
+      <a href="Giros/Giros.html">Roleta</a>
     </div>
     
   </div>
