--- a/tiger.html
+++ b/tiger.html
@@ -21,7 +21,7 @@
     
   <div id="Logo1">
     <div>
-          <img src="/imgs/Logo.jpg" alt="">
+          <img src="imgs/Logo.jpg" alt="">
     </div>
   </div>
     
