--- a/tabelaDeHorarios/horarios.html
+++ b/tabelaDeHorarios/horarios.html
@@ -22,7 +22,7 @@
     <div class="links">
       <a href="horarios.html">Horários</a>
       <a href="/tiger.html">Probabilidade</a>
-      <a href="/Giros/Giros.html">Roleta</a>
+      <a href="Giros/Giros.html">Roleta</a>
     </div>
     
   </div>
