--- a/tabelaDeHorarios/horarios.html
+++ b/tabelaDeHorarios/horarios.html
@@ -21,7 +21,7 @@
     
     <div class="links">
       <a href="horarios.html">Horários</a>
-      <a href="/tiger.html">Probabilidade</a>
+      <a href="tiger.html">Probabilidade</a>
       <a href="Giros/Giros.html">Roleta</a>
     </div>
     
