--- a/tiger.html
+++ b/tiger.html
@@ -28,7 +28,7 @@
     <div class="links">
       <a href="tabelaDeHorarios/horarios.html">Horários</a>
       <a href="tiger.html">Probabilidade</a>
-      <a href="Giros/Giros.html">Roleta</a>
+      <a href="Giros/Giros.html">Combo</a>
     </div>
     
   </div>
