--- a/Giros/Giros.html
+++ b/Giros/Giros.html
@@ -18,9 +18,9 @@
   </div>
     
     <div class="links">
-      <a href="tabelaDeHorarios/horarios.html">Horários</a>
-      <a href="tiger.html">Probabilidade</a>
-      <a href="Giros.html">Roleta</a>
+      <a href="../tabelaDeHorarios/horarios.html">Horários</a>
+      <a href="../tiger.html">Probabilidade</a>
+      <a href="Giros.html">Combo</a>
     </div>
     
   </div>
