--- a/Giros/Giros.html
+++ b/Giros/Giros.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="Style.css">
+  <link rel="stylesheet" href="../Style.css">
   <title>Document</title>
 </head>
 <body>
@@ -16,11 +16,15 @@
           <img src="imgs/Logo.jpg" alt="">
     </div>
   </div>
+  <div class="NomeLogo">
+    <h1>Hack Influencer</h1>
+  </div>
     
     <div class="links">
       <a href="../tabelaDeHorarios/horarios.html">Horários</a>
       <a href="../tiger.html">Probabilidade</a>
       <a href="Giros.html">Combo</a>
+      <a href="../GerarCasa/Gerar.html">Casa</a>
     </div>
     
   </div>
