--- a/tiger.html
+++ b/tiger.html
@@ -32,7 +32,7 @@
       <a href="tabelaDeHorarios/horarios.html">Horários</a>
       <a href="tiger.html">Probabilidade</a>
       <a href="Giros/Giros.html">Combo</a>
-      <a href="../GerarCasa/Gerar.html">Casa</a>
+      <a href="GerarCasa/Gerar.html">Casa</a>
     </div>
     
   </div>
