--- a/Giros/Giros.html
+++ b/Giros/Giros.html
@@ -193,6 +193,36 @@
 
 
 
+<div id="imageContainer5">
+  <img id="Telatigre5" src="imgs/generatour-mouse.jpg.webp" alt="Imagem">
+
+
+  <div id="barsContainer5">
+
+    <div class="bar normal5">
+      <img src="imgs/iconentrada.png.webp" alt="Icon">
+      <span class="text">Normal: --</span>
+    </div>
+
+
+    <div class="bar turbo5">
+      <img src="imgs/iconturbo.png.webp" alt="">
+      <span class="text">Turbo:--</span>
+    </div>
+
+
+    <div class="bar validade5">
+      <img src="imgs/iconvalidade.png.webp" alt="">
+      <span class="text">Validade:--</span>
+
+    </div>
+  </div>
+
+  <button id="updateButton5">Gerar sinal</button>
+
+</div>
+
+
 
 
 
