--- a/GerarCasa/Gerar.html
+++ b/GerarCasa/Gerar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt"> 
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="styles.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anta&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https: //fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=EB+Garamond:ital,wght@0,400 ..800;1.400..800&display=swap" rel="folha de estilo">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anta&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=EB+Garamond:ital,wght@0,400..800;1.400..800&display=swap" rel="stylesheet">
 </head>
 <body>
   
@@ -34,7 +35,7 @@
   <div class="container">
       <h1>Gerar Casa</h1>
       <div id="linkContainer">
-          <p id="link"></p>
+          <p id="link">exemplo</p>
           <button id="openLinkBtn">Abrir Link</button>
       </div>
       <div class="admin-section">
@@ -48,8 +49,9 @@
           </div>
       </div>
   </div>
+  
   <!-- Script Socket.IO necessário para comunicação em tempo real -->
-  <script src="server.js"></script>
+  <script src="../socket.io/socket.io.js"></script>
   <!-- Seu script personalizado -->
   <script src="script.js"></script>
 </body>
