--- a/GerarCasa/Gerar.html
+++ b/GerarCasa/Gerar.html
@@ -51,7 +51,7 @@
   </div>
   
   <!-- Script Socket.IO necessário para comunicação em tempo real -->
-  <script src="../socket.io/socket.io.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
   <!-- Seu script personalizado -->
   <script src="script.js"></script>
 </body>
